added password change form and logout button

--- a/readit_site/templates/index.html
+++ b/readit_site/templates/index.html
@@ -1,1 +1,3 @@
 <h1>Welcome, {{name}}</h1>
+<a href={%url 'change_password'%}><button>Change Password</button></a>
+<a href={%url 'logout_url'%}><button>Logout</button></a>
