--- a/readit_site/templates/base.html
+++ b/readit_site/templates/base.html
@@ -1,12 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang=en>
 
 <head>
 
 </head>
 
 <body>
+    <div style="border: 2px solid #000;">
+        <h2>Welcome, {{name}}</h2>
+    </div>
     {% block content %}
+
+
     {% endblock %}
+
+    <footer>
+        <div style="border: 2px solid #000;">
+            <h2>This is the footer</h2>
+        </div>
+    </footer>
 </body>
 
 </html>
