Subscribe link works, and changes based on subscription state

--- a/readit_site/templates/subreadit.html
+++ b/readit_site/templates/subreadit.html
@@ -2,6 +2,7 @@
 {% if subreadit.description %}
     <p>{{subreadit.description}}</p>
 {% endif %}
+<a href="{{subscribe_link}}">{{subscription|yesno:"Unsubscribe,Subscribe"}}</a>
 {% for post in posts %}
     <ul>
         <li>{{ post.title }}</li>
