migrated, link and form is working

--- a/readit_site/templates/index.html
+++ b/readit_site/templates/index.html
@@ -18,6 +18,8 @@
 
     {% include 'snippets/snippet.html' %}
 
+    <a href={% url 'new' %}><button>Create a new subredit</button></a>
+
 </div>
 
 {% endblock content %}
