We got it working

--- a/readit_site/templates/create_subreadit.html
+++ b/readit_site/templates/create_subreadit.html
@@ -19,29 +19,32 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-7 offset-lg-1">
-            <form class="create-form" method="post enctype="multipart/form-data">{% csrf_token %}
-
-                <!-- title -->
+            <form class="create-form" method="POST" action="" >
+                {% csrf_token %}
+                <!-- enctype="multipart/form-data" -->
+                <!-- title
                 <div class="form-group">
                     <label for="id_title">Title</label>
-                    <input class="form-control" type="text" name="title" id="id_title" placeholder="Title"
+                    <input class="form-control" type="text" name="title" id="name" placeholder="Title"
                     required autofocus>
                 </div>
 
-                <!-- Content/Body -->                    
+                Content/Body                    
                 <div class="form-group">
                     <label for="id_content">Content</label>
-                    <textarea class="form-control" rows="10" type="text" name="content" id="id_content" placeholder="
+                    <textarea class="form-control" rows="10" type="text" name="description" id="id_content" placeholder="
                     This subreadit is about..." required></textarea>
                 </div>
             
-                <!-- Image -->
+                Image
                 <div class="form-group">
                     <label for="id_image">Image</label>
-                    <input type="file" name="image" id="id_image" accept="image/*" required>
-                </div>
-            
-                <!-- Submit Button  -->
+                    <input type="file" name="image" id="image" accept="image/*" required>
+                </div> -->
+                
+                {{form.as_p}}
+
+                Submit Button 
                 <button class="submit-button btn btn-lg btn-primary btn block" type="submit">POST</button>
             
             </form>
