--- a/readit_site/templates/post.html
+++ b/readit_site/templates/post.html
@@ -6,4 +6,5 @@
 
 <p>
     <a href={% url 'homepage' %}><button>Home</button></a>
+    <a href={% url 'subreadit' sub.name %}><button>Back</button></a>
 </p>
