Made back button more dynamic. Displays name of subreadit now.

--- a/readit_site/templates/post.html
+++ b/readit_site/templates/post.html
@@ -6,5 +6,5 @@
 
 <p>
     <a href={% url 'homepage' %}><button>Home</button></a>
-    <a href={% url 'subreadit' sub.name %}><button>Back</button></a>
+    <a href={% url 'subreadit' sub.name %}><button>{{sub.name}}</button></a>
 </p>
