Added posts to index page

--- a/readit_site/templates/index.html
+++ b/readit_site/templates/index.html
@@ -20,6 +20,14 @@
 
     <a href={% url 'new' %}><button>Create a new subredit</button></a>
 
+    {% for post in posts %}
+        <ul>
+            <li>{{ post.title }}</li>
+            <li>{{ post.content }}</li>
+            <li>{{ post.created_at }}</li>
+        </ul>
+    {% endfor %}
+
 </div>
 
 {% endblock content %}
