--- a/readit_site/templates/post.html
+++ b/readit_site/templates/post.html
@@ -1,10 +1,13 @@
-<h1>{{sub.name}}</h1>
+<h1><a href={% url 'subreadit' sub.name %}>{{sub.name}}</a></h1>
 <h2>{{post.title}}</h2>
 <p>{{post.created_at}}</p>
 
-{{post.content}}
-
+<p>{{post.content}}</p>
+<!-- comment form -->
+<form action="" method="POST">
+    {% csrf_token %} {{form.as_p}}
+    <input type="submit" value="Comment" />
+</form>
 <p>
     <a href={% url 'homepage' %}><button>Home</button></a>
-    <a href={% url 'subreadit' sub.name %}><button>{{sub.name}}</button></a>
 </p>
