--- a/readit_site/templates/loginform.html
+++ b/readit_site/templates/loginform.html
@@ -1,6 +1,6 @@
 <h1>You must be logged in.</h1>
 <form action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Log in"/>
+  {% csrf_token %} {{ form.as_p }}
+  <input type="submit" value="Log in" />
 </form>
+<p>Not a member? Sign up <a href={% url 'register' %}>here</a>.</p>
