--- a/readit_site/templates/register.html
+++ b/readit_site/templates/register.html
@@ -1,10 +1,6 @@
-{% extends 'base.html' %}
-
-{% block content %}
-
 <h2>Register</h2>
 <form method="post">{% csrf_token %}
-    {% for field in readitusermodel_form %}
+    {% for field in form %}
     <p>
         {{field.label_tag}}
         {{field}}
@@ -22,5 +18,3 @@
     <button type="submit">Register</button>
 
 </form>
-
-{% endblock %}
