--- a/readit_site/templates/post.html
+++ b/readit_site/templates/post.html
@@ -3,6 +3,10 @@
 <p>Created on {{post.created_at}}</p>
 
 <p>{{post.content}}</p>
+<p>
+    <button><a href={% url 'post_action' sub.name post.id 'upvote' %}>{{votes.can_upVote|yesno:"Up vote:,Remove up vote:"}}</a></button> {{ votes.upVotes }} |
+    <button><a href={% url 'post_action' sub.name post.id 'downvote' %}>{{votes.can_downVote|yesno:"Down vote:,Remove Down vote:"}}</a></button> {{ votes.downVotes }}
+</p>
 <hr>
 <h3>Leave a comment below:</h3>
 <!-- comment form -->
