--- a/readit_site/templates/post.html
+++ b/readit_site/templates/post.html
@@ -1,3 +1,4 @@
+{% load lookup%}
 <h1><a href={% url 'subreadit' sub.name %}>{{sub.name}}</a></h1>
 <h2>{{post.title}}</h2>
 <p>Created on {{post.created_at}}</p>
@@ -18,7 +19,16 @@
 <hr>
 <h3>Comments:</h3>
 {% for comment in comments %}
-    <ul>- {{comment.content}}</ul>
+    {% with comment_votes=comment_data|lookup:comment.id %}
+        <ul>- {{comment.content}}</ul>
+        <p>
+            <button><a href={% url 'comment_action' sub.name post.id comment.id 'upvote' %}>{{comment_votes.can_upVote|yesno:"Up vote:,Remove up vote:"}}</a></button> {{ comment_votes.upVotes }} |
+            <button><a href={% url 'comment_action' sub.name post.id comment.id 'downvote' %}>{{comment_votes.can_downVote|yesno:"Down vote:,Remove Down vote:"}}</a></button> {{ comment_votes.downVotes }}
+        </p>
+        {% if is_moderator %}
+            <a href={% url 'comment_action' sub.name post.id comment.id 'delete' %}><button>Delete Comment</button></a>
+        {% endif %}
+    {% endwith %}
 {% endfor %}
 <hr>
 <p>
