--- a/readit_site/templates/post.html
+++ b/readit_site/templates/post.html
@@ -19,16 +19,18 @@
 <hr>
 <h3>Comments:</h3>
 {% for comment in comments %}
+<div style='border: 1px solid black; margin:5px; padding-left: 25;'>
     {% with comment_votes=comment_data|lookup:comment.id %}
-        <ul>- {{comment.content}}</ul>
+        <p>{{comment.user.username}} | {{comment.content}}</p>
         <p>
             <button><a href={% url 'comment_action' sub.name post.id comment.id 'upvote' %}>{{comment_votes.can_upVote|yesno:"Up vote:,Remove up vote:"}}</a></button> {{ comment_votes.upVotes }} |
             <button><a href={% url 'comment_action' sub.name post.id comment.id 'downvote' %}>{{comment_votes.can_downVote|yesno:"Down vote:,Remove Down vote:"}}</a></button> {{ comment_votes.downVotes }}
+            {% if is_moderator %}
+                | <a href={% url 'comment_action' sub.name post.id comment.id 'delete' %}><button>Delete Comment</button></a>
+            {% endif %}
         </p>
-        {% if is_moderator %}
-            <a href={% url 'comment_action' sub.name post.id comment.id 'delete' %}><button>Delete Comment</button></a>
-        {% endif %}
     {% endwith %}
+</div>
 {% endfor %}
 <hr>
 <p>
