working on styles

--- a/readit_site/templates/base.html
+++ b/readit_site/templates/base.html
@@ -2,12 +2,12 @@
 <html lang=en>
 
 <head>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
     <div style="border: 2px solid #000;">
-        <h2>Welcome, {{name}}</h2>
+        <h2 class="text-center">Readit</h2>
     </div>
     {% block content %}
 
