--- a/readit_site/templates/change_password.html
+++ b/readit_site/templates/change_password.html
@@ -1,4 +1,8 @@
-<form method="post">
-  {% csrf_token %} {{ form }}
-  <button type="submit">Save changes</button>
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+  <form method="post">
+    {% csrf_token %} {{ form }}
+    <button type="submit">Save changes</button>
+  </form>
+{% endblock %}
