--- a/readit_site/templates/post.html
+++ b/readit_site/templates/post.html
@@ -1,12 +1,15 @@
+{% extends 'base.html'%}
 {% load lookup%}
+
+{% block content %}
 <h1><a href={% url 'subreadit' sub.name %}>{{sub.name}}</a></h1>
 <h2>{{post.title}}</h2>
 <p>Created on {{post.created_at}}</p>
 
 <p>{{post.content}}</p>
 <p>
-    <button><a href={% url 'post_action' sub.name post.id 'upvote' %}>{{votes.can_upVote|yesno:"Up vote:,Remove up vote:"}}</a></button> {{ votes.upVotes }} |
-    <button><a href={% url 'post_action' sub.name post.id 'downvote' %}>{{votes.can_downVote|yesno:"Down vote:,Remove Down vote:"}}</a></button> {{ votes.downVotes }}
+    <button class="btn btn-primary"><a href={% url 'post_action' sub.name post.id 'upvote' %}>{{votes.can_upVote|yesno:"Up vote:,Remove up vote:"}}</a></button> {{ votes.upVotes }} |
+    <button class="btn btn-primary"><a href={% url 'post_action' sub.name post.id 'downvote' %}>{{votes.can_downVote|yesno:"Down vote:,Remove Down vote:"}}</a></button> {{ votes.downVotes }}
 </p>
 <hr>
 <h3>Leave a comment below:</h3>
@@ -23,10 +26,10 @@
     {% with comment_votes=comment_data|lookup:comment.id %}
         <p>{{comment.user.username}} | {{comment.content}}</p>
         <p>
-            <button><a href={% url 'comment_action' sub.name post.id comment.id 'upvote' %}>{{comment_votes.can_upVote|yesno:"Up vote:,Remove up vote:"}}</a></button> {{ comment_votes.upVotes }} |
-            <button><a href={% url 'comment_action' sub.name post.id comment.id 'downvote' %}>{{comment_votes.can_downVote|yesno:"Down vote:,Remove Down vote:"}}</a></button> {{ comment_votes.downVotes }}
+            <button class="btn btn-primary"><a href={% url 'comment_action' sub.name post.id comment.id 'upvote' %}>{{comment_votes.can_upVote|yesno:"Up vote:,Remove up vote:"}}</a></button> {{ comment_votes.upVotes }} |
+            <a href={% url 'comment_action' sub.name post.id comment.id 'downvote' %}><button class="btn btn-primary">{{comment_votes.can_downVote|yesno:"Down vote:,Remove Down vote:"}}</button></a> {{ comment_votes.downVotes }}
             {% if is_moderator %}
-                | <a href={% url 'comment_action' sub.name post.id comment.id 'delete' %}><button>Delete Comment</button></a>
+                | <a href={% url 'comment_action' sub.name post.id comment.id 'delete' %}><button class='btn btn-primary'>Delete Comment</button></a>
             {% endif %}
         </p>
     {% endwith %}
@@ -41,3 +44,4 @@
     <a href={% url 'post_action' sub.name post.id 'delete' %}><button>Delete Post</button></a>
     {% endif %}
 </p>
+{% endblock %}
