--- a/readit_site/templates/change_password.html
+++ b/readit_site/templates/change_password.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
+<div style="padding-left: 10px;">
   <form method="post">
     {% csrf_token %} {{ form }}
     <button type="submit">Save changes</button>
   </form>
+</div>
 {% endblock %}
