--- a/readit_site/templates/register.html
+++ b/readit_site/templates/register.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %} {% block content %}
 <h2>Register</h2>
 <form method="post">{% csrf_token %}
     {% for field in form %}
@@ -18,3 +19,4 @@
     <button type="submit">Register</button>
 
 </form>
+{% endblock %}
