--- a/readit_site/templates/subreadit.html
+++ b/readit_site/templates/subreadit.html
@@ -23,11 +23,10 @@
       {% endfor %}
     </div>
     {% endfor %}
-    <button class="submit-button btn btn-primary btn block" type="submit">Add Post</button>
+    <button class="submit-button btn btn-primary btn block" type="submit">
+      Add Post
+    </button>
   </form>
   {% for post in posts %} {% include "post_snippet.html" %} {% endfor %}
-  <p>
-    <a href={% url 'homepage' %}><button class="btn btn-primary btn-sm">Home</button></a>
-  </p>
 </div>
 {% endblock %}
